--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <gdg-group urlName="gdg-madison" showNextEvent></gdg-group>
-  <gdg-group urlName="cincy-android"></gdg-group>
+  <gdg-group urlName="cincy-android" groupName="GDG Cincinnati"></gdg-group>
   <gdg-group urlName="gdg-tc" showNextEvent>Slot content</gdg-group>
 </body>
 
