--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <gdg-group urlName="gdg-madison" showNextEvent></gdg-group>
   <gdg-group urlName="cincy-android" groupName="GDG Cincinnati"></gdg-group>
-  <gdg-group urlName="gdg-tc" showNextEvent>Slot content</gdg-group>
+  <gdg-group urlName="gdg-tc" showNextEvent imageWidth="100">Slot content</gdg-group>
 </body>
 
 </html>
