Update attribute names

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-  <gdg-group urlName="gdg-madison" showNextEvent></gdg-group>
-  <gdg-group urlName="cincy-android" groupName="GDG Cincinnati"></gdg-group>
-  <gdg-group urlName="gdg-tc" showNextEvent imageWidth="100">Slot content</gdg-group>
+  <gdg-group url-name="gdg-madison" show-next-event></gdg-group>
+  <gdg-group url-name="cincy-android" group-name="GDG Cincinnati"></gdg-group>
+  <gdg-group url-name="gdg-tc" show-next-event image-width="100">Slot content</gdg-group>
 </body>
 
 </html>
