Update to use remotedata

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-  <gdg-group url-name="gdg-madison" show-next-event></gdg-group>
-  <gdg-group url-name="cincy-android" group-name="GDG Cincinnati"></gdg-group>
+  <gdg-group url-name="gdgmadison" show-next-event></gdg-group>
+  <gdg-group url-name="Google-Developers-Group-GDG-Chicago" group-name="GDG Chicago"></gdg-group>
   <gdg-group url-name="gdg-tc" show-next-event image-width="100">Slot content</gdg-group>
 </body>
 
